deal of the day fruits added and main section

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
 
 
     <main class="max-w-[92%] mx-auto mt-8">
+
         <!-- deal the day  -->
         <div class="flex justify-between flex-col lg:flex-row gap-8 py-16">
             <div class="flex-1">
@@ -215,6 +216,129 @@
                         <p>Secondes</p>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <!-- deal of the day fruits  -->
+        <div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+                <div class="card bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h3 class="font-bold text-2xl text-red-600">12.90$ - 18.85</h3>
+                        <h2 class="card-title">Apple</h2>
+                        <div class="card-actions">
+                            <!-- Open the modal using ID.showModal() method -->
+                            <button class="btn" onclick="my_modal_1.showModal()">Details</button>
+                            <dialog id="my_modal_1" class="modal">
+                                <form method="dialog" class="modal-box">
+                                    <div class="mx-auto w-[140px]">
+                                        <img src="images/fruit6.png" alt="">
+                                    </div>
+                                    <h3 class="font-bold text-lg mt-8">Apple</h3>
+                                    <p class="py-4">Professional employees are there for you to pick the most
+                                        amazing and fresh fruits.</p>
+                                    <div class="modal-action">
+                                        <!-- if there is a button in form, it will close the modal -->
+                                        <button class="btn btn-outline">Close</button>
+                                        <button class="btn btn-error">Shop Now</button>
+                                    </div>
+                                </form>
+                            </dialog>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h3 class="font-bold text-2xl text-red-600">12.90$ - 18.85</h3>
+                        <h2 class="card-title">Orange</h2>
+                        <div class="card-actions">
+                            <!-- Open the modal using ID.showModal() method -->
+                            <button class="btn" onclick="my_modal_2.showModal()">Details</button>
+                            <dialog id="my_modal_2" class="modal">
+                                <form method="dialog" class="modal-box">
+                                    <div class="mx-auto w-[140px]">
+                                        <img src="images/fruit7.png" alt="">
+                                    </div>
+                                    <h3 class="font-bold text-lg mt-8">Orange</h3>
+                                    <p class="py-4">Professional employees are there for you to pick the most
+                                        amazing and fresh fruits.</p>
+                                    <div class="modal-action">
+                                        <!-- if there is a button in form, it will close the modal -->
+                                        <button class="btn btn-outline">Close</button>
+                                        <button class="btn btn-error">Shop Now</button>
+                                    </div>
+                                </form>
+                            </dialog>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h3 class="font-bold text-2xl text-red-600">12.90$ - 18.85</h3>
+                        <h2 class="card-title">Red Dragon</h2>
+                        <div class="card-actions">
+                            <!-- Open the modal using ID.showModal() method -->
+                            <button class="btn" onclick="my_modal_3.showModal()">Details</button>
+                            <dialog id="my_modal_3" class="modal">
+                                <form method="dialog" class="modal-box">
+                                    <div class="mx-auto w-[140px]">
+                                        <img src="images/fruit8.png" alt="">
+                                    </div>
+                                    <h3 class="font-bold text-lg mt-8">Red Dragon</h3>
+                                    <p class="py-4">Professional employees are there for you to pick the most
+                                        amazing and fresh fruits.</p>
+                                    <div class="modal-action">
+                                        <!-- if there is a button in form, it will close the modal -->
+                                        <button class="btn btn-outline">Close</button>
+                                        <button class="btn btn-error">Shop Now</button>
+                                    </div>
+                                </form>
+                            </dialog>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h3 class="font-bold text-2xl text-red-600">12.90$ - 18.85</h3>
+                        <h2 class="card-title">Banana</h2>
+                        <div class="card-actions">
+                            
+                            <!-- Open the modal using ID.showModal() method -->
+
+                            <button class="btn" onclick="my_modal_4.showModal()">Details</button>
+                            <dialog id="my_modal_4" class="modal">
+                                <form method="dialog" class="modal-box">
+                                    <div class="mx-auto w-[140px]">
+                                        <img src="images/fruit9.png" alt="">
+                                    </div>
+                                    <h3 class="font-bold text-lg mt-8">Banana</h3>
+                                    <p class="py-4">Professional employees are there for you to pick the most
+                                        amazing and fresh fruits.</p>
+                                    <div class="modal-action">
+                                        <!-- if there is a button in form, it will close the modal -->
+                                        <button class="btn btn-outline">Close</button>
+                                        <button class="btn btn-error">Shop Now</button>
+                                    </div>
+                                </form>
+                            </dialog>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mt-4">
+                <button class="btn btn-error">Shop All</button>
             </div>
         </div>
 
