--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                         <h3 class="font-bold text-2xl text-red-600">12.90$ - 18.85</h3>
                         <h2 class="card-title">Banana</h2>
                         <div class="card-actions">
-                            
+
                             <!-- Open the modal using ID.showModal() method -->
 
                             <button class="btn" onclick="my_modal_4.showModal()">Details</button>
@@ -339,6 +339,71 @@
             </div>
             <div class="text-center mt-4">
                 <button class="btn btn-error">Shop All</button>
+            </div>
+        </div>
+
+        <!-- meet our team  -->
+
+        <div class="py-14">
+            <div class="card bg-base-100 shadow-xl image-full">
+                <figure><img src="images/banner1.png" alt="Shoes" /></figure>
+                <div class="card-body">
+                    <h3 class="text-center text-4xl font-bold text-white">Meet the team section</h3>
+                    <p class="text-center mx-auto max-w-[60%]">Contrary to popular belief, is not simply random text. It
+                        has roots in a piece of classical
+                        Latin literature from 45 BC, making it over 2000 years old</p>
+
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mx-auto gap-12">
+                        <div class="space-y-2">
+                            <div class="flex justify-center">
+                                <img src="images/member1.png" alt="">
+                            </div>
+                            <h3 class="text-2xl font-bold text-center text-white">Awlad Hossain</h3>
+                            <p class="text-white text-center">Fruits Exptert</p>
+                            <div class="space-x-4 text-center">
+                                <i class="fa-brands fa-facebook"></i>
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-instagram"></i>
+                            </div>
+                        </div>
+                        <div class="space-y-2">
+                            <div class="flex justify-center">
+                                <img src="images/member2.png" alt="">
+                            </div>
+                            <h3 class="text-2xl font-bold text-center text-white">Safia Chowdhury</h3>
+                            <p class="text-white text-center">Fruits Exptert</p>
+                            <div class="space-x-4 text-center">
+                                <i class="fa-brands fa-facebook"></i>
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-instagram"></i>
+                            </div>
+                        </div>
+                        <div class="space-y-2">
+                            <div class="flex justify-center">
+                                <img src="images/member3.png" alt="">
+                            </div>
+                            <h3 class="text-2xl font-bold text-center text-white">Rokib Hossain</h3>
+                            <p class="text-white text-center">Fruits Exptert</p>
+                            <div class="space-x-4 text-center">
+                                <i class="fa-brands fa-facebook"></i>
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-instagram"></i>
+                            </div>
+                        </div>
+                        <div class="space-y-2">
+                            <div class="flex justify-center">
+                                <img src="images/member4.png" alt="">
+                            </div>
+                            <h3 class="text-2xl font-bold text-center text-white">Chaity</h3>
+                            <p class="text-white text-center">Fruits Exptert</p>
+                            <div class="space-x-4 text-center">
+                                <i class="fa-brands fa-facebook"></i>
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-instagram"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
