main section compeleted

--- a/index.html
+++ b/index.html
@@ -406,6 +406,88 @@
                 </div>
             </div>
         </div>
+         <!-- why choose us  -->
+         <div>
+            <h3 class="text-4xl text-center font-bold mb-2">Why Choose Us</h3>
+            <p class="text-center max-w-[65%] mx-auto">Contrary to popular belief, is not simply random text. It has
+                roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old</p>
+
+            <div class="my-14 grid grid-cols-1 lg:grid-cols-3 gap-6">
+                <!-- left items  -->
+                <div class="space-y-4 text-center lg:text-left">
+                    <div class="lg:flex gap-8">
+                        <div>
+                            <i class="fa-regular fa-user text-2xl px-4 py-2 bg-slate-400 rounded-full"></i>
+                        </div>
+                        <div>
+                            <h3 class="text-bold text-2xl font-bold">Dedicated Team</h3>
+                            <p>Professional employees are there for you to pick
+                                the most amazing and fresh fruits</p>
+                        </div>
+                    </div>
+                    <div class="lg:flex gap-8">
+                        <div>
+                            <i class="fa-solid fa-heart text-2xl px-4 py-2 bg-slate-400 rounded-full"></i>
+                        </div>
+                        <div>
+                            <h3 class="text-bold text-2xl font-bold">Fresh is Best</h3>
+                            <p>Professional employees are there for you to pick
+                                the most amazing and fresh fruits</p>
+                        </div>
+                    </div>
+                    <div class="lg:flex gap-8">
+                        <div>
+                            <i class="fa-solid fa-gift text-2xl px-4 py-2 bg-slate-400 rounded-full"></i>
+                        </div>
+                        <div>
+                            <h3 class="text-bold text-2xl font-bold">Gift Certificates</h3>
+                            <p>Professional employees are there for you to pick
+                                the most amazing and fresh fruits</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- center items image  -->
+                <div class="flex justify-center">
+                    <img src="images/whychoose1.png" alt="">
+                </div>
+
+                <!-- right items  -->
+                <div class="space-y-4">
+                    <div class="lg:flex flex-row-reverse text-center lg:text-right gap-8">
+                        <div>
+                            <i class="fa-regular fa-user text-2xl px-4 py-2 bg-slate-400 rounded-full"></i>
+                        </div>
+                        <div>
+                            <h3 class="text-bold text-2xl font-bold">Dedicated Team</h3>
+                            <p>Professional employees are there for you to pick
+                                the most amazing and fresh fruits</p>
+                        </div>
+                    </div>
+                    <div class="lg:flex gap-8 flex-row-reverse text-center lg:text-right">
+                        <div>
+                            <i class="fa-solid fa-heart text-2xl px-4 py-2 bg-slate-400 rounded-full"></i>
+                        </div>
+                        <div>
+                            <h3 class="text-bold text-2xl font-bold">Fresh is Best</h3>
+                            <p>Professional employees are there for you to pick
+                                the most amazing and fresh fruits</p>
+                        </div>
+                    </div>
+                    <div class="lg:flex flex-row-reverse text-center lg:text-right gap-8">
+                        <div>
+                            <i class="fa-solid fa-gift text-2xl px-4 py-2 bg-slate-400 rounded-full"></i>
+                        </div>
+                        <div>
+                            <h3 class="text-bold text-2xl font-bold">Gift Certificates</h3>
+                            <p>Professional employees are there for you to pick
+                                the most amazing and fresh fruits</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
 
 
