--- a/index.html
+++ b/index.html
@@ -490,11 +490,32 @@
     </main>
 
 
+    <!-- footer section  -->
 
+    <footer class="footer footer-center p-10 bg-black text-base-content rounded">
+        <div class="flex items-center justify-center">
+            <img src="images/logo.png" alt="">
+            <span class="text-2xl font-bold text-white">Fruit Brust</span>
+        </div>
+        <div class="flex justify-center items-center flex-wrap gap-4 text-white">
+            <a class="link link-hover">Home</a>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Shop</a>
+            <a class="link link-hover">All Fruits</a>
+            <a class="link link-hover">Support</a>
+            <a class="link link-hover">My Account</a>
+        </div>
+        <div class="flex space-x-6 text-2xl text-white">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-square-twitter"></i>
+        </div>
+    </footer>
 
-
-
-
+    
     </body>
 
     </html>
+
+
